--- a/app/src/main/res/layout/activity_orders_placed.xml
+++ b/app/src/main/res/layout/activity_orders_placed.xml
@@ -1,16 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dell.sqliteapp.OrdersPlaced">
+    android:orientation="vertical"
+    android:weightSum="1">
+
+    <ScrollView
+        android:id="@+id/sv"
+        android:layout_width="match_parent"
+        android:layout_height="420dp">
+
+        <LinearLayout
+            android:id="@+id/lli"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="228dp"
-        android:layout_height="89dp"
+        android:id="@+id/total"
+        android:layout_width="326dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="22dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:paddingTop="0dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="-3dp"
-        tools:layout_editor_absoluteY="2dp" />
-</android.support.constraint.ConstraintLayout>
+        android:textSize="30sp" />
+</LinearLayout>
